fix alignment action column to center, delete style display : flex.

--- a/frontend/src/styles/HargaBahan.css
+++ b/frontend/src/styles/HargaBahan.css
@@ -649,7 +649,9 @@
 }
 
 .actions {
-  display: flex;
+  /**
+    display: flex;
+  */
   gap: 0.5rem;
   align-items: center;
   justify-content: center;
@@ -657,7 +659,9 @@
 }
 
 .edit-btn, .delete-btn {
-  display: flex;
+  /**
+    display: flex;
+  */
   align-items: center;
   justify-content: center;
   width: 32px;
